--- a/ITPM_IT19040318/.classpath
+++ b/ITPM_IT19040318/.classpath
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="Images"/>
+	<classpathentry kind="src" path="images"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/rs2xml.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/sqlite-jdbc-3.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/mysql-connector-java-5.1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/swingx-autocomplete-1.6.5-1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/jfreechart-1.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
